[package]
name = "practice"
version = "0.1.0"
authors = ["Shalom <shalom@atins.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
rand = "0.8.4"
gfx = "0.18.2"
gfx-backend-vulkan = "0.9.0"
gfx-hal = "0.9.0"

[lib]
name = "hello_macro"
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"